--- a/index.html
+++ b/index.html
@@ -5,29 +5,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>NOVAK Hash Monitor</title>
 
-<!-- Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;600&display=swap" rel="stylesheet" />
 
 <style>
-/* ---------- GLOBAL RESET ---------- */
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  margin: 0; padding: 0; box-sizing: border-box;
   font-family: "JetBrains Mono", monospace;
 }
 
-/* ---------- THEME VARIABLES ---------- */
 :root {
   --bg-dark: #0d0f12;
   --bg-light: #f5f7fa;
   --card-dark: rgba(17, 21, 27, 0.92);
   --card-light: rgba(255, 255, 255, 0.85);
   --primary-green: #00ff84;
-  --accent-blue: #4ecbff;
-  --accent-orange: #ffb547;
-  --accent-purple: #c17dff;
-  --accent-red: #ff5c72;
   --border-dark: #222830;
   --border-light: #d3dae4;
   --text-dark: #e9eef5;
@@ -48,11 +39,10 @@ html[data-theme="light"] {
   --text: var(--text-light);
 }
 
-/* ---------- PAGE LAYOUT ---------- */
 body {
   background: var(--bg);
   color: var(--text);
-  padding: 30px;
+  padding: 32px;
 }
 
 .container {
@@ -60,12 +50,12 @@ body {
   margin: auto;
 }
 
-/* ---------- HEADER ---------- */
+/* Header */
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 22px;
+  margin-bottom: 18px;
 }
 
 .title {
@@ -74,23 +64,24 @@ body {
   color: var(--primary-green);
 }
 
-/* ---------- THEME TOGGLE BUTTON ---------- */
-.theme-toggle {
+/* Buttons */
+.btn {
   cursor: pointer;
-  padding: 7px 15px;
+  padding: 6px 14px;
   border-radius: 6px;
   border: 1px solid var(--primary-green);
-  color: var(--primary-green);
   background: transparent;
-  transition: 0.25s ease;
+  color: var(--primary-green);
+  transition: 0.25s;
+  font-size: 13px;
 }
 
-.theme-toggle:hover {
+.btn:hover {
   background: var(--primary-green);
   color: #000;
 }
 
-/* ---------- INPUT CARD ---------- */
+/* Layout Cards */
 .card {
   background: var(--card);
   padding: 20px;
@@ -99,91 +90,76 @@ body {
   margin-bottom: 22px;
 }
 
+/* Text Input */
 textarea {
   width: 100%;
-  height: 180px;
-  background: transparent;
+  height: 160px;
   border: 1px solid var(--border);
   border-radius: 6px;
   padding: 12px;
+  background: transparent;
   resize: vertical;
   color: var(--text);
   font-size: 14px;
   outline: none;
 }
 
-/* ---------- CONTROLS ---------- */
+/* Controls */
 .controls {
   display: flex;
+  flex-wrap: wrap;
   gap: 16px;
   margin-top: 12px;
-  flex-wrap: wrap;
 }
 
-select,
-input {
-  padding: 6px 10px;
+select, input {
+  padding: 6px;
   border-radius: 6px;
   border: 1px solid var(--border);
   background: transparent;
   color: var(--text);
 }
 
-/* ---------- FILE DROP ZONE ---------- */
+/* Dropzone */
 .dropzone {
+  margin-top: 18px;
   border: 2px dashed var(--primary-green);
-  border-radius: 10px;
-  padding: 35px;
+  padding: 38px;
   text-align: center;
-  margin-top: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+/* Hash rows */
+.hash-row {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+  border-bottom: 1px solid var(--border);
+}
+
+.copy {
+  padding: 2px 10px;
+  border: 1px solid var(--primary-green);
+  border-radius: 5px;
   cursor: pointer;
   transition: 0.2s;
 }
 
-.dropzone:hover {
-  background: rgba(0, 255, 132, 0.08);
-}
-
-/* ---------- HASH OUTPUT ---------- */
-.hash-list {
-  margin-top: 10px;
-}
-
-.hash-row {
-  display: flex;
-  justify-content: space-between;
-  padding: 9px 12px;
-  border-bottom: 1px solid var(--border);
-}
-
-.hash-label {
-  font-weight: 600;
-}
-
-.copy-btn {
-  cursor: pointer;
-  border: 1px solid var(--primary-green);
-  padding: 4px 10px;
-  border-radius: 5px;
-  font-size: 12px;
-  transition: 0.25s;
-}
-
-.copy-btn:hover {
+.copy:hover {
   background: var(--primary-green);
   color: black;
 }
 
-/* ---------- TIMELINE ---------- */
+/* Timeline */
 .timeline {
-  max-height: 260px;
+  max-height: 240px;
   overflow-y: auto;
+  padding: 10px;
   font-size: 12px;
   border: 1px solid var(--border);
-  margin-top: 12px;
-  padding: 10px;
   border-radius: 6px;
-  background: rgba(0, 255, 132, 0.04);
+  background: rgba(0, 255, 132, 0.05);
 }
 </style>
 </head>
@@ -191,162 +167,170 @@ input {
 <body>
 <div class="container">
 
-  <!-- HEADER -->
-  <div class="header">
-    <div class="title">NOVAK Hash Monitor</div>
-    <button class="theme-toggle" onclick="toggleTheme()">Light/Dark</button>
+<!-- HEADER -->
+<div class="header">
+  <div class="title">NOVAK Hash Monitor</div>
+
+  <div style="display:flex; gap:8px;">
+    <select id="audience" class="btn" onchange="updateAudience()">
+      <option value="public" selected>Public View</option>
+      <option value="government">Government / Regulatory</option>
+      <option value="investor">Investor / Leadership</option>
+      <option value="cyber">Cybersecurity / IT</option>
+      <option value="academic">Academic / Research</option>
+    </select>
+
+    <button class="btn" onclick="toggleTheme()">Light/Dark</button>
+  </div>
+</div>
+
+<!-- Dynamic Description -->
+<p id="description" style="margin-bottom:18px;">
+  This tool creates a unique digital fingerprint of any text or file.  
+  If anything changes—even one character—the fingerprint instantly changes.
+</p>
+
+<!-- TEXT INPUT -->
+<div class="card">
+  <textarea id="input" placeholder="Try it — type something or paste text here..."></textarea>
+
+  <div class="controls">
+    <label>Interval (ms): <input id="interval" type="number" value="1000" min="100" /></label>
+    <label>Live Update: 
+      <select id="live"><option value="on" selected>On</option><option value="off">Off</option></select>
+    </label>
+    <label>Output Format:
+      <select id="format"><option value="hex" selected>Hex</option><option value="base64">Base64</option></select>
+    </label>
+    <label id="hmacLabel" style="display:none;">HMAC Key:
+      <input id="hmac" placeholder="optional secret key" />
+    </label>
   </div>
 
-  <!-- DESCRIPTION -->
-  <p>
-    Real-time multi-algorithm cryptographic integrity engine — originating from
-    <strong>NIPS (Verified Input Layer)</strong>,
-    <strong>HARMONEE (Execution Receipt Layer)</strong>,
-    <strong>REVELATION (Audit Chain Layer)</strong>, and evolving into the
-    <strong>NOVAK Deterministic Governance System</strong>.
-  </p>
-
-  <!-- TEXT INPUT -->
-  <div class="card">
-    <textarea id="input" placeholder="// Type or paste text, code, JSON, or logs — hashes update live"></textarea>
-
-    <div id="binaryWarning" style="color: var(--accent-red); margin-top: 8px; display: none;">
-      Binary data detected — use file drop zone instead.
-    </div>
-
-    <!-- CONTROLS -->
-    <div class="controls">
-      <label>Interval (ms):
-        <input id="interval" type="number" value="1000" min="100" />
-      </label>
-
-      <label>Live Update:
-        <select id="live">
-          <option value="on" selected>On</option>
-          <option value="off">Off</option>
-        </select>
-      </label>
-
-      <label>Output Format:
-        <select id="format">
-          <option value="hex">Hex</option>
-          <option value="base64">Base64</option>
-        </select>
-      </label>
-
-      <label>HMAC Key:
-        <input id="hmac" placeholder="optional secret key" />
-      </label>
-    </div>
-
-    <!-- FILE DROP ZONE -->
-    <div id="dropzone" class="dropzone">
-      Drag & drop a file here to hash it
-    </div>
+  <div id="dropzone" class="dropzone">
+    Drag & drop a file here to hash it
   </div>
+</div>
 
-  <!-- HASH OUTPUT -->
-  <div class="card">
-    <h3>Hashes</h3>
-    <div id="hashes" class="hash-list"></div>
-  </div>
+<!-- HASHES -->
+<div class="card">
+  <h3 id="hashHeader">Integrity Fingerprint</h3>
+  <div id="hashes"></div>
+</div>
 
-  <!-- TIMELINE -->
-  <div class="card">
-    <h3>Hash Timeline</h3>
-    <div id="timeline" class="timeline"></div>
-  </div>
+<!-- TIMELINE -->
+<div class="card" id="timelineCard">
+  <h3 id="timelineHeader">Proof History</h3>
+  <div id="timeline" class="timeline"></div>
+</div>
 
 </div>
 
 <script>
-/* THEME TOGGLE */
 function toggleTheme() {
   const html = document.documentElement;
   html.dataset.theme = html.dataset.theme === "dark" ? "light" : "dark";
 }
 
-/* BINARY DETECTION */
-function isBinary(str) {
-  return /[\x00-\x08\x0E-\x1F]/.test(str);
+/* AUDIENCE MODE TEXT MAP */
+const audienceContent = {
+  public: {
+    desc: "This tool creates a unique digital fingerprint of any text or file. If anything changes—even one character—the fingerprint instantly changes.",
+    hash: "Integrity Fingerprint",
+    timeline: "Proof History",
+    showAdvanced: false
+  },
+  government: {
+    desc: "Demonstrates NOVAK’s enforcement of proof-before-action — ensuring records, claims, or system decisions cannot be altered without detection.",
+    hash: "Regulatory Integrity Verification",
+    timeline: "Audit & Compliance Trail",
+    showAdvanced: true
+  },
+  investor: {
+    desc: "NOVAK enables provable trust, preventing fraud, tampering, and unauthorized automated actions — across healthcare, finance, logistics, and government.",
+    hash: "Business Integrity Output",
+    timeline: "Accountability Timeline",
+    showAdvanced: false
+  },
+  cyber: {
+    desc: "Live hashing for SOC, DevSecOps, forensic validation, file integrity monitoring, and breach detection workflows.",
+    hash: "Cryptographic Hash Output",
+    timeline: "Security Event Timeline",
+    showAdvanced: true
+  },
+  academic: {
+    desc: "Hash functions produce deterministic, collision-resistant outputs — foundational to cryptography, distributed systems, and digital provenance.",
+    hash: "Cryptographic Fingerprints",
+    timeline: "Experimental Log",
+    showAdvanced: true
+  }
+};
+
+/* APPLY MODE */
+function updateAudience() {
+  const mode = document.getElementById("audience").value;
+  const config = audienceContent[mode];
+
+  document.getElementById("description").innerText = config.desc;
+  document.getElementById("hashHeader").innerText = config.hash;
+  document.getElementById("timelineHeader").innerText = config.timeline;
+
+  document.getElementById("hmacLabel").style.display = config.showAdvanced ? "inline-block" : "none";
+  document.getElementById("timelineCard").style.display = config.showAdvanced ? "block" : "none";
 }
 
-/* HASHING CONFIG */
-const algorithms = ["SHA-1", "SHA-256", "SHA-384", "SHA-512"];
+/* HASH ENGINE */
+const algorithms = ["SHA-256","SHA-384","SHA-512"];
 
-/* UPDATE LOOP */
 async function updateHashes() {
-  if (document.getElementById("live").value === "off") return;
+  if (live.value === "off") return;
 
-  const text = document.getElementById("input").value;
+  const text = input.value;
+  const format = formatSelect.value;
 
-  if (isBinary(text)) {
-    document.getElementById("binaryWarning").style.display = "block";
-    return;
-  } else {
-    document.getElementById("binaryWarning").style.display = "none";
-  }
-
-  const format = document.getElementById("format").value;
-  const hmacKey = document.getElementById("hmac").value.trim();
-
-  let hashOutput = "";
+  let output = "";
 
   for (const algo of algorithms) {
-    const encoder = new TextEncoder();
-    const data = encoder.encode(text);
+    const data = new TextEncoder().encode(text);
+    const hash = await crypto.subtle.digest(algo, data);
+    const bytes = new Uint8Array(hash);
 
-    let hash = await crypto.subtle.digest(algo, data);
-    let bytes = new Uint8Array(hash);
-
-    let result = format === "hex"
-      ? [...bytes].map(b => b.toString(16).padStart(2, "0")).join("")
+    const result = format === "hex"
+      ? [...bytes].map(b => b.toString(16).padStart(2,"0")).join("")
       : btoa(String.fromCharCode(...bytes));
 
-    hashOutput += `
+    output += `
       <div class="hash-row">
-        <span class="hash-label">${algo}</span>
+        <span>${algo}</span>
         <span>${result}</span>
-        <button class="copy-btn" onclick="copyText(\`${result}\`)">Copy</button>
-      </div>`;
+        <button class="copy" onclick="navigator.clipboard.writeText('${result}')">Copy</button>
+      </div>
+    `;
   }
 
-  document.getElementById("hashes").innerHTML = hashOutput;
-
-  const t = new Date().toLocaleTimeString();
-  document.getElementById("timeline").innerHTML += `[${t}] Hashes updated...\n`;
+  document.getElementById("hashes").innerHTML = output;
+  timeline.innerHTML += `[${new Date().toLocaleTimeString()}] Hashes updated\n`;
 }
 
-/* COPY SUPPORT */
-function copyText(t) {
-  navigator.clipboard.writeText(t);
-}
-
-/* INTERVAL ENGINE */
-setInterval(updateHashes, document.getElementById("interval").value);
-document.getElementById("interval").addEventListener("change", () => {
+/* INTERVAL LOOP */
+setInterval(updateHashes, interval.value);
+interval.addEventListener("change", () => {
   clearInterval(updateHashes);
-  setInterval(updateHashes, document.getElementById("interval").value);
+  setInterval(updateHashes, interval.value);
 });
 
 /* FILE HASHING */
-document.getElementById("dropzone").addEventListener("dragover", e => {
-  e.preventDefault();
-});
-
-document.getElementById("dropzone").addEventListener("drop", async e => {
+dropzone.addEventListener("dragover", e => e.preventDefault());
+dropzone.addEventListener("drop", async e => {
   e.preventDefault();
   const file = e.dataTransfer.files[0];
   if (!file) return;
-
-  const buf = await file.arrayBuffer();
-  const bytes = new Uint8Array(buf);
-
-  const t = new Date().toLocaleTimeString();
-  document.getElementById("timeline").innerHTML += `[${t}] File "${file.name}" hashed\n`;
-
-  updateHashes();
+  input.value = await file.text();
+  timeline.innerHTML += `[${new Date().toLocaleTimeString()}] File imported: ${file.name}\n`;
 });
+
+/* INIT */
+updateAudience();
 </script>
 </body>
 </html>
