--- a/index.html
+++ b/index.html
@@ -5,24 +5,27 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>NOVAK Hash Monitor</title>
 
-<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;600&display=swap" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=JetBrains+Mono&display=swap" rel="stylesheet" />
 
 <style>
 * {
   margin: 0; padding: 0; box-sizing: border-box;
-  font-family: "JetBrains Mono", monospace;
+  font-family: "Inter", sans-serif;
 }
 
+/* THEME COLORS */
 :root {
-  --bg-dark: #0d0f12;
-  --bg-light: #f5f7fa;
-  --card-dark: rgba(17, 21, 27, 0.92);
-  --card-light: rgba(255, 255, 255, 0.85);
-  --primary-green: #00ff84;
-  --border-dark: #222830;
+  --blue: #2463eb;
+  --blue-light: #3b82f6;
+  --blue-dark: #1e3a8a;
+  --bg-dark: #0d1117;
+  --bg-light: #f7f9fc;
+  --card-dark: #161b22;
+  --card-light: #ffffff;
+  --border-dark: #2d333b;
   --border-light: #d3dae4;
-  --text-dark: #e9eef5;
-  --text-light: #0d0f12;
+  --text-dark: #e6edf3;
+  --text-light: #0d1117;
 }
 
 html[data-theme="dark"] {
@@ -30,6 +33,7 @@ html[data-theme="dark"] {
   --card: var(--card-dark);
   --border: var(--border-dark);
   --text: var(--text-dark);
+  --accent: var(--blue-light);
 }
 
 html[data-theme="light"] {
@@ -37,6 +41,7 @@ html[data-theme="light"] {
   --card: var(--card-light);
   --border: var(--border-light);
   --text: var(--text-light);
+  --accent: var(--blue-dark);
 }
 
 body {
@@ -55,33 +60,33 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 18px;
+  margin-bottom: 24px;
 }
 
 .title {
-  font-size: 34px;
+  font-size: 32px;
   font-weight: 600;
-  color: var(--primary-green);
+  color: var(--accent);
 }
 
 /* Buttons */
-.btn {
+.btn, select {
   cursor: pointer;
   padding: 6px 14px;
   border-radius: 6px;
-  border: 1px solid var(--primary-green);
+  border: 1px solid var(--accent);
   background: transparent;
-  color: var(--primary-green);
+  color: var(--accent);
+  font-size: 14px;
   transition: 0.25s;
-  font-size: 13px;
 }
 
-.btn:hover {
-  background: var(--primary-green);
-  color: #000;
+.btn:hover, select:hover {
+  background: var(--accent);
+  color: white;
 }
 
-/* Layout Cards */
+/* Cards */
 .card {
   background: var(--card);
   padding: 20px;
@@ -93,15 +98,15 @@ body {
 /* Text Input */
 textarea {
   width: 100%;
-  height: 160px;
+  height: 170px;
   border: 1px solid var(--border);
   border-radius: 6px;
   padding: 12px;
   background: transparent;
   resize: vertical;
   color: var(--text);
+  font-family: "JetBrains Mono", monospace;
   font-size: 14px;
-  outline: none;
 }
 
 /* Controls */
@@ -112,54 +117,57 @@ textarea {
   margin-top: 12px;
 }
 
-select, input {
-  padding: 6px;
-  border-radius: 6px;
-  border: 1px solid var(--border);
-  background: transparent;
-  color: var(--text);
+.controls input, .controls select {
+  font-family: inherit;
 }
 
 /* Dropzone */
 .dropzone {
-  margin-top: 18px;
-  border: 2px dashed var(--primary-green);
-  padding: 38px;
+  margin-top: 20px;
+  border: 2px dashed var(--accent);
+  padding: 40px;
   text-align: center;
   border-radius: 10px;
   cursor: pointer;
+  transition: 0.25s;
 }
 
-/* Hash rows */
+.dropzone:hover {
+  background: rgba(36, 99, 235, 0.08);
+}
+
+/* Hash Rows */
 .hash-row {
   display: flex;
   justify-content: space-between;
-  padding: 8px;
   border-bottom: 1px solid var(--border);
+  padding: 8px 0;
+  font-family: "JetBrains Mono", monospace;
 }
 
 .copy {
+  border: 1px solid var(--accent);
+  border-radius: 4px;
   padding: 2px 10px;
-  border: 1px solid var(--primary-green);
-  border-radius: 5px;
   cursor: pointer;
   transition: 0.2s;
 }
 
 .copy:hover {
-  background: var(--primary-green);
-  color: black;
+  background: var(--accent);
+  color: white;
 }
 
 /* Timeline */
 .timeline {
-  max-height: 240px;
+  height: 220px;
   overflow-y: auto;
   padding: 10px;
   font-size: 12px;
   border: 1px solid var(--border);
   border-radius: 6px;
-  background: rgba(0, 255, 132, 0.05);
+  background: rgba(36, 99, 235, 0.06);
+  font-family: "JetBrains Mono", monospace;
 }
 </style>
 </head>
@@ -185,17 +193,16 @@ select, input {
 </div>
 
 <!-- Dynamic Description -->
-<p id="description" style="margin-bottom:18px;">
-  This tool creates a unique digital fingerprint of any text or file.  
-  If anything changes—even one character—the fingerprint instantly changes.
+<p id="description" style="margin-bottom:18px; font-size:15px;">
+  This tool generates a unique digital fingerprint of any text or file. If anything changes—even a single character—the fingerprint changes instantly.
 </p>
 
 <!-- TEXT INPUT -->
 <div class="card">
-  <textarea id="input" placeholder="Try it — type something or paste text here..."></textarea>
+  <textarea id="input" placeholder="Try it — type or paste something here..."></textarea>
 
   <div class="controls">
-    <label>Interval (ms): <input id="interval" type="number" value="1000" min="100" /></label>
+    <label>Interval (ms): <input id="interval" type="number" value="800" min="100" /></label>
     <label>Live Update: 
       <select id="live"><option value="on" selected>On</option><option value="off">Off</option></select>
     </label>
@@ -203,7 +210,7 @@ select, input {
       <select id="format"><option value="hex" selected>Hex</option><option value="base64">Base64</option></select>
     </label>
     <label id="hmacLabel" style="display:none;">HMAC Key:
-      <input id="hmac" placeholder="optional secret key" />
+      <input id="hmac" placeholder="optional" />
     </label>
   </div>
 
@@ -227,46 +234,46 @@ select, input {
 </div>
 
 <script>
-function toggleTheme() {
-  const html = document.documentElement;
-  html.dataset.theme = html.dataset.theme === "dark" ? "light" : "dark";
-}
+const input = document.getElementById("input");
+const timeline = document.getElementById("timeline");
+const formatSelect = document.getElementById("format");
+const live = document.getElementById("live");
+const intervalField = document.getElementById("interval");
 
-/* AUDIENCE MODE TEXT MAP */
+/* Audience Mode Descriptions */
 const audienceContent = {
   public: {
-    desc: "This tool creates a unique digital fingerprint of any text or file. If anything changes—even one character—the fingerprint instantly changes.",
+    desc: "This tool generates a unique digital fingerprint of any text or file. If anything changes—even a single character—the fingerprint changes instantly.",
     hash: "Integrity Fingerprint",
     timeline: "Proof History",
     showAdvanced: false
   },
   government: {
-    desc: "Demonstrates NOVAK’s enforcement of proof-before-action — ensuring records, claims, or system decisions cannot be altered without detection.",
+    desc: "Demonstrates NOVAK’s proof-before-action compliance — ensuring records, claims, or system decisions cannot be altered without detection.",
     hash: "Regulatory Integrity Verification",
     timeline: "Audit & Compliance Trail",
     showAdvanced: true
   },
   investor: {
-    desc: "NOVAK enables provable trust, preventing fraud, tampering, and unauthorized automated actions — across healthcare, finance, logistics, and government.",
+    desc: "NOVAK prevents fraud, data manipulation, and unauthorized automated actions — across healthcare, finance, defense, and government.",
     hash: "Business Integrity Output",
     timeline: "Accountability Timeline",
     showAdvanced: false
   },
   cyber: {
-    desc: "Live hashing for SOC, DevSecOps, forensic validation, file integrity monitoring, and breach detection workflows.",
+    desc: "Real-time hashing for SOC, DFIR, DevSecOps, file integrity monitoring, and tamper detection.",
     hash: "Cryptographic Hash Output",
     timeline: "Security Event Timeline",
     showAdvanced: true
   },
   academic: {
-    desc: "Hash functions produce deterministic, collision-resistant outputs — foundational to cryptography, distributed systems, and digital provenance.",
+    desc: "Hashes are collision-resistant, deterministic mathematical functions — foundational to cryptography and distributed systems.",
     hash: "Cryptographic Fingerprints",
-    timeline: "Experimental Log",
+    timeline: "Research Log",
     showAdvanced: true
   }
 };
 
-/* APPLY MODE */
 function updateAudience() {
   const mode = document.getElementById("audience").value;
   const config = audienceContent[mode];
@@ -279,15 +286,19 @@ function updateAudience() {
   document.getElementById("timelineCard").style.display = config.showAdvanced ? "block" : "none";
 }
 
-/* HASH ENGINE */
-const algorithms = ["SHA-256","SHA-384","SHA-512"];
+function toggleTheme() {
+  const html = document.documentElement;
+  html.dataset.theme = html.dataset.theme === "dark" ? "light" : "dark";
+}
 
-async function updateHashes() {
+/* Hash algorithms shown by default */
+const algorithms = ["SHA-256"];
+
+async function generateHashes() {
   if (live.value === "off") return;
 
   const text = input.value;
   const format = formatSelect.value;
-
   let output = "";
 
   for (const algo of algorithms) {
@@ -309,28 +320,34 @@ async function updateHashes() {
   }
 
   document.getElementById("hashes").innerHTML = output;
-  timeline.innerHTML += `[${new Date().toLocaleTimeString()}] Hashes updated\n`;
+  timeline.innerHTML += `[${new Date().toLocaleTimeString()}] Updated\n`;
 }
 
-/* INTERVAL LOOP */
-setInterval(updateHashes, interval.value);
-interval.addEventListener("change", () => {
-  clearInterval(updateHashes);
-  setInterval(updateHashes, interval.value);
+/* TYPE-INSTANT HASHING */
+input.addEventListener("input", generateHashes);
+
+/* LOOP UPDATE */
+let hashInterval = setInterval(generateHashes, intervalField.value);
+intervalField.addEventListener("change", () => {
+  clearInterval(hashInterval);
+  hashInterval = setInterval(generateHashes, intervalField.value);
 });
 
-/* FILE HASHING */
+/* FILE DROP */
 dropzone.addEventListener("dragover", e => e.preventDefault());
 dropzone.addEventListener("drop", async e => {
   e.preventDefault();
   const file = e.dataTransfer.files[0];
   if (!file) return;
+
   input.value = await file.text();
-  timeline.innerHTML += `[${new Date().toLocaleTimeString()}] File imported: ${file.name}\n`;
+  timeline.innerHTML += `[${new Date().toLocaleTimeString()}] File loaded: ${file.name}\n`;
+  generateHashes();
 });
 
 /* INIT */
 updateAudience();
+generateHashes();
 </script>
 </body>
 </html>
